# NeuralNetworkFromScratch

./: README.md  pyproject.toml
.github/workflows/: publish.yml
NeuralNetworkFromScratch/: __init__.py  layers.py  model.py  utils.py
neuralnetworkfromscratch.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
neuralnetworknumpy/: __init__.py  learning_rate.py  masks.py  model.py  utils.py
neuralnetworknumpy.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
neuralnetworknumpy/layers/: Activation.py  AveragePooling2D.py  BatchNorm.py  BatchNorm2D.py  Conv2D.py  Dense.py  DepthwiseConv2D.py  DepthwiseSeparableConv2D.py  Dropout.py  Embedding.py  FeedForwardNetwork.py  Flatten.py  GRU.py  GlobalAveragePooling2D.py  GroupConv2D.py  LSTM.py  Layer.py  LayerNorm.py  MaxPooling2D.py  MultiHeadAttention.py  PositionEmbedding.py  RNN.py  ResidualBlock.py  Seq2Seq.py  SingleHeadAttention.py  SpatiallySeparableConv2D.py  TransformerBlock.py  __init__.py
neuralnetworknumpy/tokenizer/: Tokenizer.py  Vocab.py  __init__.py  pretrained.py
neuralnetworknumpy/utils/: History.py  Scaler.py  __init__.py  split.py
tests/: conv2d_test.py  model.h5.npz  test_load.py  test_model.py
tests/CNN_Tests/: cifar10_load_test.py  cifar10_test.py  conv2d_test.py  conv2d_test_load.py
tests/NN_Tests/: test_load.py  test_model.py
